--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                <ul>
                     <li><a href="MeanRatingsTime.html">Mean User Ratings for Painting Styles Over Time</a></li>
                     <li><a href="NegativePositive.html">Negative vs. Positing Painting Scores</a></li>
-                    <li><a href=".html"></a></li>
+                    <li><a href="EmotionRatings.html">Emotion Ratings</a></li>
                </ul>
 
                <p>For full explanations of the visualizations as well as source code, view the GitHub repository <a href="https://github.com/INFO-4602-5602/project-2-wikiart-ahmed_alex_pratik_project2">here</a>.</p>
