Emotion Ratings FIx

--- a/EmotionRatings.html
+++ b/EmotionRatings.html
@@ -134,7 +134,7 @@
 		<header class="top-bar">
 			<a class="home-btn" href="index.html"><i class="fas fa-chevron-left"></i> Return Home</a>
 		</header>
-		<div class="container container__fullheight">
+		<div style="padding-top:5rem;">
 			<div class="painting" style="display:flex">
 				<div class="filters">
 					<table>
