--- a/EmotionRatings.html
+++ b/EmotionRatings.html
@@ -42,6 +42,7 @@
 			}
 			#artwork:hover {
 			  box-shadow: 0 0 5px 3px rgb(255,215,0,0.5);
+			  cursor: pointer;
 			}
 			#artwork-border {
 				position:absolute;
