--- a/EmotionRatings.html
+++ b/EmotionRatings.html
@@ -32,7 +32,7 @@
 				margin-left: 3%;
 				margin-right: 3%;
 			  width: 385px;
-			  height: 285px;
+			  height: 286px;
 				object-fit: contain;
 				z-index: 2;
 
@@ -64,7 +64,7 @@
 			}
 
 			.painting {
-				margin: 1% 0 2% 0;
+				margin: 0 0 2% 0;
 				width: 100%;
 				height: 305px;
 			}
@@ -110,6 +110,7 @@
 				width: 75%;
 				margin-left:auto;
     		margin-right:auto;
+				margin-top: 1%;
 			}
 			#meanRating {
 				font-weight: bold;
