--- a/EmotionRatings.html
+++ b/EmotionRatings.html
@@ -77,7 +77,7 @@
 			.info {
 				width: 33.33%;
 				width: 350px;
-				height: 250px;
+				height: auto;
 				margin-left: auto;
 				margin-right: auto;
 				border: 1px solid lightgrey;
