--- a/EmotionRatings.html
+++ b/EmotionRatings.html
@@ -6,6 +6,8 @@
 
 		<link rel="stylesheet" href="styles.css?v=3" />  
 
+		<script src="https://kit.fontawesome.com/2d5aa19ad7.js" crossorigin="anonymous"></script>
+
 		<!-- D3.js -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
 
