--- a/EmotionRatings.html
+++ b/EmotionRatings.html
@@ -62,7 +62,8 @@
 			}
 
 			.painting {
-				margin: 0 0 2% 0;
+				margin:0 0 2rem;
+				min-height:20rem;
 				width: 100%;
 			}
 			.filters,
@@ -71,6 +72,12 @@
 			{
 				flex:1;
 				position:relative;
+				margin:0 1rem;
+			}
+			.filters
+			{
+				display:flex;
+				flex-direction:column;
 			}
 			.info {
 				height: auto;
@@ -80,8 +87,18 @@
 				border-radius: 4px;
 				background-color: rgba(224,224,224,0.2);
 			}
-			#selectPainting, #similarPainting {
-				width: 250px;
+			.filter--group
+			{
+				display:flex;
+				align-items:center;
+			}
+			.filter--group strong
+			{
+				margin-right:1em;
+			}
+			#selectPainting, 
+			#similarPainting {
+				width: 100%;
 			}
 			.rating {
 				margin-top: -0.5%;
@@ -89,9 +106,11 @@
 				color: #5086de;
 			}
 			.relatedWork {
-				width: 350px;
-				height: 150px;
-				margin-top: 5%;
+				width: 100%;
+				flex:1 1 auto;
+				min-height: 8rem;
+				margin-top: 2rem;
+				padding:1rem;
 				margin-left: auto;
 				margin-right: auto;
 				border: 1px solid lightgrey;
@@ -133,12 +152,10 @@
 		<div style="padding:5rem 2rem 3rem; width:100%;">
 			<div class="painting" style="display:flex">
 				<div class="filters">
-					<table>
-						<tr>
-						<td><h4>Title: </h4></td>
-						<td><select id="selectPainting"></select></td>
-						</tr>
-					</table>
+					<div class="filter--group">
+						<strong>Title: </strong>
+						<select id="selectPainting"></select>
+					</div>
 					<div class="relatedWork">
 						<p id="otherWork"></p>
 						<select id="similarPainting"></select>
