--- a/EmotionRatings.html
+++ b/EmotionRatings.html
@@ -80,10 +80,8 @@
 				flex-direction:column;
 			}
 			.info {
-				height: auto;
-				margin-left: auto;
-				margin-right: auto;
 				border: 1px solid lightgrey;
+				padding:1rem;
 				border-radius: 4px;
 				background-color: rgba(224,224,224,0.2);
 			}
